--- a/src/components/Logo.module.css
+++ b/src/components/Logo.module.css
@@ -3,6 +3,8 @@
   align-items: center;
   gap: 10px;
   height: 55.25px;
+  text-decoration: none;
+  color: var(--color-primary);
 }
 
 .logo span {
